--- a/source/index.html
+++ b/source/index.html
@@ -10,39 +10,70 @@
 
 <body>
   <header class="page-header">
-    <h1 class="visually-hidden">Веб-страница PINK</h1>
-    <a class="page-header__logo">
-      <!--<img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">-->
-    </a>
-    <nav class="main-nav">
-      <div class="main-nav__wrapper">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item stile-list__item--active">
-            <a class="site-list__link">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="photo.html">Фотографии</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Конкурс</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="#">HTML Academy</a>
-          </li>
-        </ul>
+    <div class="page-header__wrapper">
+      <div class="page-header__container">
+        <h1 class="visually-hidden">Веб-страница PINK</h1>
+        <div class="page-header_menu">
+          <a class="page-header__logo">
+          <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
+          </a>
+          <button class="page-header__toggle" type="button">Развернуть/Свернуть</button>
+        </div>
+        <nav class="main-nav">
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item stile-list__item--active">
+                <a class="site-list__link">Главная</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="photo.html">Фотографии</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="form.html">Конкурс</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="#">HTML Academy</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
-    </nav>
+    </div>
   </header>
 
   <main class="page-main">
+
     <section class="page-intro">
+      <div class="page-intro__wrapper">
+        <h2 class="page-intro__title">Взгляните на жизнь иначе!</h2>
+      </div>
+      <section class="download-app">
+        <a class="download-app__main-link" href="https://www.apple.com/itunes/">Скачать приложение</a>
+        <div class="pdownload-app__buttons">
+          <a class="download-app__button download-app__button--apple" href="#">Apple</a>
+          <a class="download-app__button download-app__button--android" href="#">Android</a>
+          <a class="download-app__button download-app__button--winphone" href="#">Windows Phone</a>
+        </div>
+        <p class="download-app__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+      </section>
+    </section>
+
+
+
+
+
+
+
+
+
+    <!-- <section class="page-intro">
       <h2 class="visually-hidden">Наше приложение!</h2>
       <div class="page-intro__wrapper">
-        <!--<img class="page-intro__image" src="http://placehold.it/150x100" alt="PINK">-->
+        <img class="page-intro__image" src="img/iphone-hand-mobile@1x.png" width="258" height="286" alt="PINK">
         <section class="download-app">
           <div class="download-app__wrapper">
-            <a class="download-app__btn" href="#">Скачать приложение</a>
+            <h2 class="download-app__title">Взгляните на жизнь иначе!</h2>
+            <a class="download-app__btn" href="https://www.apple.com/itunes/">Скачать приложение</a>
             <div class="download-app__platforms">
               <div class="download-app__platform download-app__platform--Apple"></div>
               <div class="download-app__platform download-app__platform--Android"></div>
@@ -52,29 +83,31 @@
           </div>
         </section>
       </div>
-    </section>
+    </section> -->
 
     <section class="features">
-      <h2 class="visually-hidden">Функции PINK</h2>
-      <div class="features__title">
-        <div class="features__container">
-          <h2 class="features__heading">Устали от серости мегаполиса?</h2>
-          <h2 class="features__heading">Нам есть, что вам предложить!</h2>
+      <div class="container">
+        <h2 class="visually-hidden">Функции PINK</h2>
+        <div class="features__title">
+          <div class="features__container">
+            <h2 class="features__heading">Устали от серости мегаполиса?</h2>
+            <h2 class="features__heading">Нам есть, что вам предложить!</h2>
+          </div>
         </div>
-      </div>
-      <div class="features__items">
-        <div class="features__wrapper">
-          <div class="features-item">
-            <h2 class="features-item__title">Поднимает настроение</h2>
-            <p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-          </div>
-          <div class="features-item">
-            <h2 class="features-item__title">Меняет мир вокруг</h2>
-            <p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-          </div>
-          <div class="features-item">
-            <h2 class="features-item__title">Заводит новых друзей</h2>
-            <p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+        <div class="features__items">
+          <div class="features__wrapper">
+            <div class="features-item">
+              <h2 class="features-item__title">Поднимает настроение</h2>
+              <p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+            </div>
+            <div class="features-item">
+              <h2 class="features-item__title">Меняет мир вокруг</h2>
+              <p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </div>
+            <div class="features-item">
+              <h2 class="features-item__title">Заводит новых друзей</h2>
+              <p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+            </div>
           </div>
         </div>
       </div>
